added launch checks. A Project is no longer allowed to run if it has any errors (destecs/overture). Checks are added both in launch config and launch delegate.
+ builder clean up

git-svn-id: svn://svn.code.sf.net/p/destecs/code/trunk@403 fd54fc82-ac30-4e97-bb06-279643433f24